[metadata]
description-file=README.md
license_files=LICENSE.rst
name = py_tools
version = 0.1
author = Prakash Leon Mishra
author_email = dev.leonmishra@gmail.com
description = A simple Package to load & parse configuration to diffrent datatypes
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/rionzz-inc/py_tools
project_urls =
	Bug Tracker = https://github.com/rionzz-inc/py_tools/issues
	repository = https://github.com/rionzz-inc/py_tools
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src